--- a/BERT + BIO_Tagging.ipynb
+++ b/BERT + BIO_Tagging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ashish159565/miniconda3/envs/p3.11/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "import pandas as pd\n",
@@ -42,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,13 +155,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "class BERT_SPO_Tagger(nn.Module):\n",
+    "class BERT_SPO_BIO_Tagger(nn.Module):\n",
     "    def __init__(self, tag2id, tokenizer, lr=5e-5, epochs = 10, load_predefined_weights = None):\n",
     "        super(BERT_SPO_Tagger, self).__init__()\n",
     "        self.bert = BertModel.from_pretrained(\"bert-base-cased\")\n",
@@ -191,7 +182,6 @@
     "        return logits\n",
     "\n",
     "    def fit(self, dataset):\n",
-    "\n",
     "        class SPOBioDataset(Dataset):\n",
     "            def __init__(self, data, tokenizer, tag2id, max_len=512):\n",
     "                self.data = data\n",
@@ -278,30 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.020662489170075182, 0.9973756321653805, 0.9974108923858073, 0.9967812455924725, 0.9991688662327981, 0.9950937921863352, 0.9935070822671315]\n",
-      "[0.12066248917007519, 0.9973756321653805, 0.9974108923858073, 0.9967812455924725, 0.9991688662327981, 0.9950937921863352, 0.9935070822671315]\n",
-      "Epoch 1 | Loss: 0.9123\n",
-      "Epoch 2 | Loss: 0.5776\n",
-      "Epoch 3 | Loss: 0.4547\n",
-      "Epoch 4 | Loss: 0.3319\n",
-      "Epoch 5 | Loss: 0.2308\n",
-      "Epoch 6 | Loss: 0.1576\n",
-      "Epoch 7 | Loss: 0.1188\n",
-      "Epoch 8 | Loss: 0.0898\n",
-      "Epoch 9 | Loss: 0.0736\n",
-      "Epoch 10 | Loss: 0.0652\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model = BERT_SPO_Tagger(tag2id, tokenizer).to(device).fit(dataset)"
+    "model = BERT_SPO_BIO_Tagger(tag2id, tokenizer).to(device).fit(dataset)\n",
+    "torch.save(model.state_dict(), \"BERT_BIO_Tagging_model.pth\")"
    ]
   },
   {
@@ -313,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,33 +382,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predicted Triplets:\n",
-      "('PharmNovo', 'plans to apply', 'FDA')\n",
-      "('PharmNovo', 'is', 'FDA')\n",
-      "('Viktor Drvota', 'said', 'FDA')\n",
-      "('Viktor Drvota', 'said', 'CEO')\n",
-      "('PharmNovo', 'conducted', 'FDA')\n",
-      "('PharmNovo', 'is', 'Karolinska Development AB')\n",
-      "('PharmNovo', 'said', 'FDA')\n",
-      "('PharmNovo', 'said', 'CEO')\n",
-      "('Viktor Drvota', 'said', 'Phase 2a')\n",
-      "('PharmNovo', 'received', 'FDA')\n",
-      "('PharmNovo', 'is', 'Phase 2a')\n",
-      "('Viktor Drvota', 'contact', 'Karolinska Development AB')\n",
-      "('Viktor Drvota', 'contact', 'CEO')\n",
-      "('PharmNovo', 'said', 'Phase 2a')\n",
-      "('PharmNovo', 'received', 'Karolinska Development AB')\n",
-      "('PharmNovo', 'received', 'Phase 2a')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sample_text = articles_df.iloc[0][\"content\"]\n",
     "\n",
@@ -465,18 +413,11 @@
     "for t in triplets:\n",
     "    print(t)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "p3.11",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -490,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
