Update BERT + BIO_Tagging.ipynb

--- a/BERT + BIO_Tagging.ipynb
+++ b/BERT + BIO_Tagging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mayanktamakuwala/Documents/PHI/Git/Knowledge-Graphs/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "import pandas as pd\n",
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +172,7 @@
     "\n",
     "class BERT_SPO_BIO_Tagger(nn.Module):\n",
     "    def __init__(self, tag2id, tokenizer, lr=5e-5, epochs = 10, load_predefined_weights = None):\n",
-    "        super(BERT_SPO_Tagger, self).__init__()\n",
+    "        super(BERT_SPO_BIO_Tagger, self).__init__()\n",
     "        self.bert = BertModel.from_pretrained(\"bert-base-cased\")\n",
     "        self.dropout = nn.Dropout(0.1)\n",
     "        self.classifier = nn.Linear(self.bert.config.hidden_size, len(tag2id))\n",
@@ -268,9 +277,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'BERT_SPO_Tagger' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m model = \u001b[43mBERT_SPO_BIO_Tagger\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtag2id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m)\u001b[49m.to(device).fit(dataset)\n\u001b[32m      2\u001b[39m torch.save(model.state_dict(), \u001b[33m\"\u001b[39m\u001b[33mBERT_BIO_Tagging_model.pth\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mBERT_SPO_BIO_Tagger.__init__\u001b[39m\u001b[34m(self, tag2id, tokenizer, lr, epochs, load_predefined_weights)\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, tag2id, tokenizer, lr=\u001b[32m5e-5\u001b[39m, epochs = \u001b[32m10\u001b[39m, load_predefined_weights = \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     \u001b[38;5;28msuper\u001b[39m(\u001b[43mBERT_SPO_Tagger\u001b[49m, \u001b[38;5;28mself\u001b[39m).\u001b[34m__init__\u001b[39m()\n\u001b[32m      6\u001b[39m     \u001b[38;5;28mself\u001b[39m.bert = BertModel.from_pretrained(\u001b[33m\"\u001b[39m\u001b[33mbert-base-cased\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m     \u001b[38;5;28mself\u001b[39m.dropout = nn.Dropout(\u001b[32m0.1\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'BERT_SPO_Tagger' is not defined"
+     ]
+    }
+   ],
    "source": [
     "model = BERT_SPO_BIO_Tagger(tag2id, tokenizer).to(device).fit(dataset)\n",
     "torch.save(model.state_dict(), \"BERT_BIO_Tagging_model.pth\")"
