ROUGE and BLEU scores Evaluation Update

--- a/BERT + BIO_Tagging.ipynb
+++ b/BERT + BIO_Tagging.ipynb
@@ -2,28 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install pandas spacy transformers seqeval torch scikit-learn hf_xet\n",
-    "# %python -m spacy download en_core_web_sm"
+    "# %pip install pandas spacy transformers torch scikit-learn hf_xet rouge nltk\n",
+    "# ! python -m spacy download en_core_web_sm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mayanktamakuwala/Documents/PHI/Git/Knowledge-Graphs/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "import pandas as pd\n",
@@ -34,15 +25,16 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import torch.nn.functional as F\n",
     "from transformers import BertTokenizerFast, BertModel\n",
+    "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
+    "from rouge import Rouge\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,13 +129,14 @@
     "    if matching_triplets_row.empty:\n",
     "        continue\n",
     "\n",
-    "    tokens, tags = get_bio_tags(content, triplets_df.iloc[idx, 1])\n",
-    "    dataset.append((tokens, tags))"
+    "    triplets = triplets_df.iloc[idx, 1]\n",
+    "    tokens, tags = get_bio_tags(content, triplets)\n",
+    "    dataset.append((tokens, triplets, tags))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,25 +157,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MPS device found.\n"
+     ]
+    }
+   ],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "if torch.backends.mps.is_available():\n",
+    "    device = torch.device(\"mps\")\n",
+    "    print (\"MPS device found.\")\n",
+    "elif torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "    print (\"CUDA device found.\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "    print (\"Using CPU.\")\n",
     "\n",
     "class BERT_SPO_BIO_Tagger(nn.Module):\n",
-    "    def __init__(self, tag2id, tokenizer, lr=5e-5, epochs = 10, load_predefined_weights = None):\n",
+    "    def __init__(self, tag2id, id2tag, tokenizer, lr=5e-5, epochs = 10):\n",
     "        super(BERT_SPO_BIO_Tagger, self).__init__()\n",
     "        self.bert = BertModel.from_pretrained(\"bert-base-cased\")\n",
     "        self.dropout = nn.Dropout(0.1)\n",
     "        self.classifier = nn.Linear(self.bert.config.hidden_size, len(tag2id))\n",
     "        self.__tag2id = tag2id\n",
     "        self.__train_loader = None\n",
+    "        self.__id2tag = id2tag\n",
     "        self.__val_loader = None\n",
     "        self.__lr = lr\n",
     "        self.__epochs = epochs\n",
-    "        self.__predefined_weights = load_predefined_weights\n",
     "        self.__tokenizer = tokenizer\n",
+    "        self.__nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
     "    def forward(self, input_ids, attention_mask):\n",
     "        outputs = self.bert(input_ids=input_ids, attention_mask=attention_mask)\n",
@@ -202,7 +212,7 @@
     "                return len(self.data)\n",
     "\n",
     "            def __getitem__(self, idx):\n",
-    "                tokens, tags = self.data[idx]\n",
+    "                tokens, _, tags  = self.data[idx]\n",
     "\n",
     "                tokenized_input = self.tokenizer(tokens,\n",
     "                                                is_split_into_words=True,\n",
@@ -225,6 +235,9 @@
     "                    'attention_mask': tokenized_input['attention_mask'].squeeze(),\n",
     "                    'labels': torch.tensor(label_ids)\n",
     "                }\n",
+    "\n",
+    "            def get_raw_item(self, idx):\n",
+    "                return self.data[idx] \n",
     "            \n",
     "        train_data, val_data = train_test_split(dataset, test_size=0.1, random_state=42)\n",
     "\n",
@@ -234,10 +247,7 @@
     "        self.__train_loader = DataLoader(train_dataset, batch_size=8, shuffle=True)\n",
     "        self.__val_loader = DataLoader(val_dataset, batch_size=8)\n",
     "        \n",
-    "        if(self.__predefined_weights == None):\n",
-    "            weights = self.__compute_class_weights(train_data)\n",
-    "        else :\n",
-    "            weights = self.__predefined_weights\n",
+    "        weights = self.__compute_class_weights(train_data)\n",
     "\n",
     "        optimizer = optim.AdamW(self.parameters(), lr=self.__lr)\n",
     "        loss_func = nn.CrossEntropyLoss(ignore_index=-100, weight=weights)\n",
@@ -265,37 +275,217 @@
     "        return self\n",
     "\n",
     "    def __compute_class_weights(self, dataset):\n",
-    "        tag_counts = Counter(tag for _, tags in dataset for tag in tags)\n",
+    "        tag_counts = Counter(tag for _, _, tags in dataset for tag in tags)\n",
     "        total = sum(tag_counts.values())\n",
     "        weights = [1.0 - (tag_counts[tag] / total) for tag in self.__tag2id.keys()]\n",
-    "        print(weights)\n",
     "        # weights[0] += 0.14\n",
     "        weights[0] += 0.1\n",
-    "        print(weights)\n",
-    "        return torch.tensor(weights).to(device)"
+    "        return torch.tensor(weights).to(device)\n",
+    "\n",
+    "    def evaluate_on_validation_data(self):\n",
+    "        predicted_triplets_all = []\n",
+    "        reference_triplets_all = []\n",
+    "\n",
+    "        val_dataset = self.__val_loader.dataset\n",
+    "\n",
+    "        for i in range(len(val_dataset)):\n",
+    "            tokens, true_triplets, _ = val_dataset.get_raw_item(i)\n",
+    "            text = \" \".join(tokens)\n",
+    "\n",
+    "            # Predict tags\n",
+    "            pred_tags = self.__predict_bio_tags(tokens)\n",
+    "            pred_triplets = self.__extract_and_form_triplets(text, pred_tags)\n",
+    "\n",
+    "            predicted_triplets_all.extend(pred_triplets)\n",
+    "            reference_triplets_all.extend(true_triplets)\n",
+    "\n",
+    "        rouge = Rouge()\n",
+    "        rouge_scores = []\n",
+    "\n",
+    "        for ref, pred in zip(reference_triplets_all, predicted_triplets_all):\n",
+    "            ref_str = \" \".join(ref)\n",
+    "            pred_str = \" \".join(pred)\n",
+    "            try:\n",
+    "                score = rouge.get_scores(pred_str, ref_str)[0]\n",
+    "                rouge_scores.append(score)\n",
+    "            except:\n",
+    "                continue\n",
+    "\n",
+    "        avg_rouge = {}\n",
+    "        if rouge_scores:\n",
+    "            keys = rouge_scores[0].keys()\n",
+    "            for k in keys:\n",
+    "                avg_rouge[k] = {\n",
+    "                    \"f\": sum(d[k][\"f\"] for d in rouge_scores) / len(rouge_scores),\n",
+    "                    \"p\": sum(d[k][\"p\"] for d in rouge_scores) / len(rouge_scores),\n",
+    "                    \"r\": sum(d[k][\"r\"] for d in rouge_scores) / len(rouge_scores),\n",
+    "                }\n",
+    "\n",
+    "        smoothie = SmoothingFunction().method4\n",
+    "        bleu_scores = []\n",
+    "        for ref, pred in zip(reference_triplets_all, predicted_triplets_all):\n",
+    "            bleu = sentence_bleu([ref], pred, smoothing_function=smoothie)\n",
+    "            bleu_scores.append(bleu)\n",
+    "\n",
+    "        avg_bleu = sum(bleu_scores) / len(bleu_scores) if bleu_scores else 0.0\n",
+    "\n",
+    "        return {\"ROUGE\": avg_rouge, \"BLEU\": avg_bleu}\n",
+    "\n",
+    "    def load_model_weights(self, torch_load_weights):\n",
+    "        self.load_state_dict(torch_load_weights)\n",
+    "\n",
+    "    @torch.no_grad()\n",
+    "    def __predict_bio_tags(self, tokens):\n",
+    "        self.eval()\n",
+    "\n",
+    "        tokenized_input = self.__tokenizer(tokens,\n",
+    "                                    is_split_into_words=True,\n",
+    "                                    return_tensors=\"pt\",\n",
+    "                                    truncation=True,\n",
+    "                                    padding=\"max_length\",\n",
+    "                                    max_length=512)\n",
+    "\n",
+    "        input_ids = tokenized_input[\"input_ids\"].to(device)\n",
+    "        attention_mask = tokenized_input[\"attention_mask\"].to(device)\n",
+    "\n",
+    "        logits = self(input_ids=input_ids, attention_mask=attention_mask)\n",
+    "        predictions = torch.argmax(logits, dim=2)\n",
+    "\n",
+    "        word_ids = tokenized_input.word_ids(batch_index=0)\n",
+    "        predicted_tags = []\n",
+    "\n",
+    "        for idx, word_idx in enumerate(word_ids):\n",
+    "            if word_idx is None:\n",
+    "                continue\n",
+    "            tag_id = predictions[0][idx].item()\n",
+    "            tag = self.__id2tag[tag_id]\n",
+    "            if idx == 0 or word_ids[idx] != word_ids[idx - 1]:\n",
+    "                predicted_tags.append((tokens[word_idx], tag))\n",
+    "\n",
+    "        return predicted_tags\n",
+    "\n",
+    "    def __extract_and_form_triplets(self, text, tagged_tokens):\n",
+    "\n",
+    "        spans = {'SUB': [], 'PRED': [], 'OBJ': []}\n",
+    "        current_span = []\n",
+    "        current_label = None\n",
+    "\n",
+    "        for token, tag in tagged_tokens:\n",
+    "            if tag == 'O':\n",
+    "                if current_span and current_label:\n",
+    "                    spans[current_label].append(\" \".join(current_span))\n",
+    "                current_span = []\n",
+    "                current_label = None\n",
+    "            elif tag.startswith('B-'):\n",
+    "                if current_span and current_label:\n",
+    "                    spans[current_label].append(\" \".join(current_span))\n",
+    "                current_label = tag[2:]\n",
+    "                current_span = [token]\n",
+    "            elif tag.startswith('I-') and current_label == tag[2:]:\n",
+    "                current_span.append(token)\n",
+    "            else:\n",
+    "                if current_span and current_label:\n",
+    "                    spans[current_label].append(\" \".join(current_span))\n",
+    "                current_span = []\n",
+    "                current_label = None\n",
+    "\n",
+    "        if current_span and current_label:\n",
+    "            spans[current_label].append(\" \".join(current_span))\n",
+    "\n",
+    "        filtered_spans = spans\n",
+    "\n",
+    "        doc = self.__nlp(text)\n",
+    "        triplets = []\n",
+    "\n",
+    "        for sent in doc.sents:\n",
+    "            sent_text = sent.text\n",
+    "            subjs = [s for s in filtered_spans[\"SUB\"] if s in sent_text]\n",
+    "            preds = [p for p in filtered_spans[\"PRED\"] if p in sent_text]\n",
+    "            objs = [o for o in filtered_spans[\"OBJ\"] if o in sent_text]\n",
+    "\n",
+    "            for s in subjs:\n",
+    "                for p in preds:\n",
+    "                    for o in objs:\n",
+    "                        triplets.append((s, p, o))\n",
+    "\n",
+    "        return list(set(triplets))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = BERT_SPO_BIO_Tagger(tag2id, id2tag, tokenizer, epochs = 0).to(device)\n",
+    "\n",
+    "model.load_model_weights(torch.load(\"BERT_BIO_Tagging_model.pth\"))\n",
+    "\n",
+    "model = model.fit(dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate Validation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores = model.evaluate_on_validation_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'BERT_SPO_Tagger' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m model = \u001b[43mBERT_SPO_BIO_Tagger\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtag2id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtokenizer\u001b[49m\u001b[43m)\u001b[49m.to(device).fit(dataset)\n\u001b[32m      2\u001b[39m torch.save(model.state_dict(), \u001b[33m\"\u001b[39m\u001b[33mBERT_BIO_Tagging_model.pth\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mBERT_SPO_BIO_Tagger.__init__\u001b[39m\u001b[34m(self, tag2id, tokenizer, lr, epochs, load_predefined_weights)\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, tag2id, tokenizer, lr=\u001b[32m5e-5\u001b[39m, epochs = \u001b[32m10\u001b[39m, load_predefined_weights = \u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m     \u001b[38;5;28msuper\u001b[39m(\u001b[43mBERT_SPO_Tagger\u001b[49m, \u001b[38;5;28mself\u001b[39m).\u001b[34m__init__\u001b[39m()\n\u001b[32m      6\u001b[39m     \u001b[38;5;28mself\u001b[39m.bert = BertModel.from_pretrained(\u001b[33m\"\u001b[39m\u001b[33mbert-base-cased\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m     \u001b[38;5;28mself\u001b[39m.dropout = nn.Dropout(\u001b[32m0.1\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'BERT_SPO_Tagger' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "{'rouge-1': {'f': 0.03552182244872036,\n",
+       "  'p': 0.04217110573042776,\n",
+       "  'r': 0.03175948345439871},\n",
+       " 'rouge-2': {'f': 0.015591752719394664,\n",
+       "  'p': 0.018361581920903952,\n",
+       "  'r': 0.01426553672316384},\n",
+       " 'rouge-l': {'f': 0.03552182244872036,\n",
+       "  'p': 0.04217110573042776,\n",
+       "  'r': 0.03175948345439871}}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = BERT_SPO_BIO_Tagger(tag2id, tokenizer).to(device).fit(dataset)\n",
-    "torch.save(model.state_dict(), \"BERT_BIO_Tagging_model.pth\")"
+    "scores[\"ROUGE\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0025737884951656954"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores[\"BLEU\"]"
    ]
   },
   {
@@ -307,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,9 +594,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Triplets:\n",
+      "('PharmNovo', 'is', 'Karolinska Development AB')\n",
+      "('PharmNovo', 'said', 'CEO')\n",
+      "('PharmNovo', 'is', 'FDA')\n",
+      "('Viktor Drvota', 'said', 'CEO')\n",
+      "('PharmNovo', 'said', 'FDA')\n",
+      "('PharmNovo', 'conducted', 'FDA')\n",
+      "('PharmNovo', 'received', 'Karolinska Development AB')\n",
+      "('PharmNovo', 'plans to apply for', 'FDA')\n",
+      "('PharmNovo', 'received', 'FDA')\n",
+      "('Viktor Drvota', 'said', 'FDA')\n"
+     ]
+    }
+   ],
    "source": [
     "sample_text = articles_df.iloc[0][\"content\"]\n",
     "\n",
