Script Added to download weight of trained model from huggingface

--- a/BERT + BIO_Tagging.ipynb
+++ b/BERT + BIO_Tagging.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install pandas spacy transformers torch scikit-learn hf_xet rouge nltk\n",
+    "# %pip install pandas spacy transformers torch scikit-learn hf_xet rouge nltk requests\n",
     "# ! python -m spacy download en_core_web_sm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,13 +28,42 @@
     "from transformers import BertTokenizerFast, BertModel\n",
     "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
     "from rouge import Rouge\n",
+    "import requests\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model weights downloaded to BERT_BIO_Tagging_model.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "# URL of my HuggingFace where I've uploaded the trained model weights.\n",
+    "url = \"https://huggingface.co/MayankTamakuwala/BERT_BIO_Tagger/resolve/main/BERT_BIO_Tagging_model.pth\"\n",
+    "output_path = \"BERT_BIO_Tagging_model.pth\"\n",
+    "\n",
+    "response = requests.get(url, stream=True)\n",
+    "response.raise_for_status()\n",
+    "\n",
+    "with open(output_path, \"wb\") as f:\n",
+    "    for chunk in response.iter_content(chunk_size=8192):\n",
+    "        f.write(chunk)\n",
+    "\n",
+    "print(f\"Model weights downloaded to {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +488,7 @@
        "  'r': 0.03175948345439871}}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +508,7 @@
        "0.0025737884951656954"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
