Project Directory Restucture

--- a/models/BERT + BIO_Tagging.ipynb
+++ b/models/BERT + BIO_Tagging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,41 +29,45 @@
     "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
     "from rouge import Rouge\n",
     "import requests\n",
+    "import os\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model weights downloaded to BERT_BIO_Tagging_model.pth\n"
+      "Weights already exists\n"
      ]
     }
    ],
    "source": [
-    "# URL of my HuggingFace where I've uploaded the trained model weights.\n",
-    "url = \"https://huggingface.co/MayankTamakuwala/BERT_BIO_Tagger/resolve/main/BERT_BIO_Tagging_model.pth\"\n",
-    "output_path = \"BERT_BIO_Tagging_model.pth\"\n",
+    "if not os.path.exists(\"./BERT_BIO_Tagging_model.pth\"):\n",
+    "    # URL of my HuggingFace where I've uploaded the trained model weights.\n",
+    "    url = \"https://huggingface.co/MayankTamakuwala/BERT_BIO_Tagger/resolve/main/BERT_BIO_Tagging_model.pth\"\n",
+    "    output_path = \"BERT_BIO_Tagging_model.pth\"\n",
     "\n",
-    "response = requests.get(url, stream=True)\n",
-    "response.raise_for_status()\n",
+    "    response = requests.get(url, stream=True)\n",
+    "    response.raise_for_status()\n",
     "\n",
-    "with open(output_path, \"wb\") as f:\n",
-    "    for chunk in response.iter_content(chunk_size=8192):\n",
-    "        f.write(chunk)\n",
+    "    with open(output_path, \"wb\") as f:\n",
+    "        for chunk in response.iter_content(chunk_size=8192):\n",
+    "            f.write(chunk)\n",
     "\n",
-    "print(f\"Model weights downloaded to {output_path}\")"
+    "    print(f\"Model weights downloaded to {output_path}\")\n",
+    "else:\n",
+    "    print(f\"Weights already exists\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,10 +75,10 @@
     "sectors = [\"finance\", \"healthcare\", \"tech\"]\n",
     "triplets_list = []\n",
     "for sector in sectors:\n",
-    "    articles = pd.read_csv(f\"globenewswire_articles_{sector}.csv\")\n",
+    "    articles = pd.read_csv(f\"../Webscraped Dataset/globenewswire_articles_{sector}.csv\")\n",
     "    articles_df = pd.concat([articles_df, articles], ignore_index=True)\n",
     "\n",
-    "    with open(f\"{sector}_articles_triplets.csv\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    with open(f\"../Ground Truth/{sector}_articles_triplets.csv\", \"r\", encoding=\"utf-8\") as f:\n",
     "        reader = csv.reader(f, delimiter=',', quotechar='\"')\n",
     "        header = next(reader)\n",
     "        \n",
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,24 +475,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'rouge-1': {'f': 0.03552182244872036,\n",
-       "  'p': 0.04217110573042776,\n",
-       "  'r': 0.03175948345439871},\n",
-       " 'rouge-2': {'f': 0.015591752719394664,\n",
-       "  'p': 0.018361581920903952,\n",
-       "  'r': 0.01426553672316384},\n",
-       " 'rouge-l': {'f': 0.03552182244872036,\n",
-       "  'p': 0.04217110573042776,\n",
-       "  'r': 0.03175948345439871}}"
+       "{'rouge-1': {'f': 0.022715796134169748,\n",
+       "  'p': 0.02875302663438256,\n",
+       "  'r': 0.02023809523809524},\n",
+       " 'rouge-2': {'f': 0.005906522771279825,\n",
+       "  'p': 0.005649717514124294,\n",
+       "  'r': 0.0062146892655367235},\n",
+       " 'rouge-l': {'f': 0.022715796134169748,\n",
+       "  'p': 0.02875302663438256,\n",
+       "  'r': 0.02023809523809524}}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,16 +503,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0025737884951656954"
+       "0.0012287711848613261"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -631,15 +635,15 @@
      "output_type": "stream",
      "text": [
       "Predicted Triplets:\n",
-      "('PharmNovo', 'is', 'Karolinska Development AB')\n",
-      "('PharmNovo', 'said', 'CEO')\n",
-      "('PharmNovo', 'is', 'FDA')\n",
       "('Viktor Drvota', 'said', 'CEO')\n",
+      "('PharmNovo', 'is', 'Karolinska Development AB')\n",
+      "('PharmNovo', 'received', 'Karolinska Development AB')\n",
       "('PharmNovo', 'said', 'FDA')\n",
       "('PharmNovo', 'conducted', 'FDA')\n",
-      "('PharmNovo', 'received', 'Karolinska Development AB')\n",
-      "('PharmNovo', 'plans to apply for', 'FDA')\n",
+      "('PharmNovo', 'is', 'FDA')\n",
       "('PharmNovo', 'received', 'FDA')\n",
+      "('PharmNovo', 'plans to apply for', 'FDA')\n",
+      "('PharmNovo', 'said', 'CEO')\n",
       "('Viktor Drvota', 'said', 'FDA')\n"
      ]
     }
