Requirements .txt added

--- a/models/BERT + BIO_Tagging.ipynb
+++ b/models/BERT + BIO_Tagging.ipynb
@@ -2,17 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %pip install pandas spacy transformers torch scikit-learn hf_xet rouge nltk requests seqeval\n",
-    "# ! python -m spacy download en_core_web_sm"
+    "# ! python -m venv venv\n",
+    "# ! source venv/bin/activate\n",
+    "# %pip install pandas transformers torch scikit-learn hf_xet spacy rouge nltk requests seqeval\n",
+    "# ! python -m spacy download en_core_web_sm\n",
+    "# OR\n",
+    "# %pip install -r ../requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
