--- a/models/BERT + BIO_Tagging.ipynb
+++ b/models/BERT + BIO_Tagging.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# I'm loading all the necessary libraries before proceeding to data loading and preprocessing.\n",
     "# ! python -m venv venv\n",
     "# ! source venv/bin/activate\n",
     "# %pip install pandas transformers torch scikit-learn hf_xet spacy rouge nltk requests seqeval\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +56,7 @@
     }
    ],
    "source": [
+    "# I'm making sure the pretrained model weights are downloaded if not already present.\n",
     "if not os.path.exists(\"./BERT_BIO_Tagging_model.pth\"):\n",
     "    # URL of my HuggingFace account where I've uploaded the trained model weights.\n",
     "    url = \"https://huggingface.co/MayankTamakuwala/BERT_BIO_Tagger/resolve/main/BERT_BIO_Tagging_model.pth\"\n",
@@ -74,10 +76,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# I am combining all sector-specific articles into a single DataFrame for processing.\n",
     "articles_df = pd.DataFrame()\n",
     "sectors = [\"finance\", \"healthcare\", \"tech\"]\n",
     "triplets_list = []\n",
@@ -123,11 +126,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_bio_tags(text, spo_list):\n",
+    "    # I'm trying to align SPO triplets with token spans to generate BIO tags.\n",
     "    tokens = tokenize_text(text)\n",
     "    tags = ['O'] * len(tokens)\n",
     "\n",
@@ -155,10 +159,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# I'm now creating the final dataset by aligning tokens and their corresponding BIO tags.\n",
     "dataset = []\n",
     "\n",
     "for idx, row in articles_df.iterrows():\n",
@@ -176,10 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Here, I'm initializing the tokenizer and defining tag mappings for the BIO tagging scheme.\n",
     "tokenizer = BertTokenizerFast.from_pretrained(\"bert-base-cased\")\n",
     "\n",
     "# # Unique BIO tags\n",
@@ -197,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -220,6 +226,7 @@
     "    print (\"Using CPU.\")\n",
     "\n",
     "class BERT_SPO_BIO_Tagger(nn.Module):\n",
+    "    # I am defining my custom BERT-based model for sequence tagging using BIO labels.\n",
     "    def __init__(self, tag2id, id2tag, tokenizer, lr=5e-5, epochs = 10):\n",
     "        super(BERT_SPO_BIO_Tagger, self).__init__()\n",
     "        self.bert = BertModel.from_pretrained(\"bert-base-cased\")\n",
@@ -292,6 +299,7 @@
     "        optimizer = optim.AdamW(self.parameters(), lr=self.__lr)\n",
     "        loss_func = nn.CrossEntropyLoss(ignore_index=-100, weight=weights)\n",
     "\n",
+    "        # Finally, I'm starting the training loop to fine-tune the model on my custom dataset.\n",
     "        for epoch in range(self.__epochs):\n",
     "            self.train()\n",
     "            total_loss = 0\n",
@@ -324,6 +332,7 @@
     "\n",
     "    @torch.no_grad()\n",
     "    def evaluate_on_validation_data(self):\n",
+    "        # I am now evaluating the model using F1, Precision, Recall, ROUGE, and BLEU metrics.\n",
     "        self.eval()\n",
     "        seqeval_true = []\n",
     "        seqeval_pred = []\n",
@@ -440,7 +449,7 @@
     "        return predicted_tags\n",
     "\n",
     "    def __extract_and_form_triplets(self, text, tagged_tokens):\n",
-    "\n",
+    "        # I'm reconstructing SPO triplets by checking which entities co-occur in the same sentence.\n",
     "        spans = {'SUB': [], 'PRED': [], 'OBJ': []}\n",
     "        current_span = []\n",
     "        current_label = None\n",
@@ -664,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -791,6 +800,7 @@
     }
    ],
    "source": [
+    "# Finally, I'm running inference on a random sample to see the predicted SPO triplets.\n",
     "sample_text = articles_df.iloc[random.randint(0, articles_df.shape[0] - 1)][\"content\"]\n",
     "\n",
     "tagged = predict_bio_tags(sample_text, model, tokenizer, id2tag, device)\n",
